[workspace]
members = ["mini-lsm", "xtask", "mini-lsm-starter"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/skyzh/mini-lsm"
keywords = ["storage", "database", "tutorial"]
license = "Apache-2.0"
repository = "https://github.com/skyzh/mini-lsm"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
